Address more code review comments.